--- a/examples/16_app_box/index.html
+++ b/examples/16_app_box/index.html
@@ -39,7 +39,7 @@
     <link rel="import" href="../../bower_components/app-layout/app-scroll-effects/effects/fade-background.html"/>
 
 </head>
-<body >
+<body>
 
 <header>
     <app-toolbar>
@@ -71,9 +71,10 @@
 
     <section id="modern">
         <article>
-            <hr />
+            <hr/>
             <h2>For Modern Browsers</h2>
-            <p>Polymer is built from the ground up for modern browsers, using the latest web platform APIs. Polyfills provide support on evergreen browsers for APIs that aren't universal yet.</p>
+            <p>Polymer is built from the ground up for modern browsers, using the latest web platform APIs. Polyfills
+                provide support on evergreen browsers for APIs that aren't universal yet.</p>
         </article>
         <!--
           This app-box uses the class `.second` and the mixin `--app-box-background-front-layer` to assign the background image.
