--- a/examples/17_grid/index.html
+++ b/examples/17_grid/index.html
@@ -57,62 +57,72 @@
 
     <demo-snippet>
         <template>
-    <dom-module id="my-grid">
-        <style include="app-grid-style">
-            :host {
-                --app-grid-columns: 3;
-                --app-grid-expandible-item-columns: 3;
-                --app-grid-gutter: 30px;
-            }
+            <dom-module id="my-grid">
+                <style include="app-grid-style">
+                    :host {
+                        --app-grid-columns: 3;
+                        --app-grid-expandible-item-columns: 3;
+                        --app-grid-gutter: 30px;
+                    }
 
-            .extended {
-                @apply(--app-grid-expandible-item);
-            }
-        </style>
-        <template>
-            <ul class="app-grid">
-                <li>
-                    <img width="100%" src="groynes-339250_640.jpg"/>
-                </li>
-                <li>
-                    <img width="100%" height="" src="rio-de-janeiro-1683701_640.jpg"/>
-                </li>
-                <li>
-                    <h1>Grid layout!</h1>
-                    <blockquote cite="https://elements.polymer-project.org/elements/app-layout?active=app-grid">app-grid is a helper class useful for creating responsive, fluid grid layouts using custom properties. Because custom properties can be defined inside a @media rule, you can customize the grid layout for different responsive breakpoints.</blockquote>
-                    <p>from <a href="https://elements.polymer-project.org/elements/app-layout?active=app-grid">https://elements.polymer-project.org/elements/app-layout?active=app-grid</a></p>
-                </li>
-                <li class="extended">
-                    <img width="100%" src="Mount_Ellinor,_Mount_Washington_Panorama.jpg"/>
-                </li>
-                <li>
-                    <h1>Pictures</h1>
-                    <ul>
-                        <li><a href="https://pixabay.com/en/groynes-sea-baltic-sea-339250/">https://pixabay.com/en/groynes-sea-baltic-sea-339250/</a></li>
-                        <li><a href="https://pixabay.com/en/rio-de-janeiro-urca-brazil-1683701/">https://pixabay.com/en/rio-de-janeiro-urca-brazil-1683701/</a></li>
-                        <li><a href="https://en.wikipedia.org/wiki/Mount_Ellinor#/media/File:Mount_Ellinor,_Mount_Washington_Panorama.jpg">https://en.wikipedia.org/wiki/Mount_Ellinor#/media/ File:Mount_Ellinor,_Mount_Washington_Panorama.jpg</a></li>
-                        <li><a href="https://pixabay.com/en/umbrella-street-color-1678327/">https://pixabay.com/en/umbrella-street-color-1678327/</a></li>
+                    .extended {
+                        @apply(--app-grid-expandible-item);
+                    }
+                </style>
+                <template>
+                    <ul class="app-grid">
+                        <li>
+                            <img width="100%" src="groynes-339250_640.jpg"/>
+                        </li>
+                        <li>
+                            <img width="100%" height="" src="rio-de-janeiro-1683701_640.jpg"/>
+                        </li>
+                        <li>
+                            <h1>Grid layout!</h1>
+                            <blockquote cite="https://elements.polymer-project.org/elements/app-layout?active=app-grid">
+                                app-grid is a helper class useful for creating responsive, fluid grid layouts using
+                                custom properties. Because custom properties can be defined inside a @media rule, you
+                                can customize the grid layout for different responsive breakpoints.
+                            </blockquote>
+                            <p>from <a href="https://elements.polymer-project.org/elements/app-layout?active=app-grid">https://elements.polymer-project.org/elements/app-layout?active=app-grid</a>
+                            </p>
+                        </li>
+                        <li class="extended">
+                            <img width="100%" src="Mount_Ellinor,_Mount_Washington_Panorama.jpg"/>
+                        </li>
+                        <li>
+                            <h1>Pictures</h1>
+                            <ul>
+                                <li><a href="https://pixabay.com/en/groynes-sea-baltic-sea-339250/">https://pixabay.com/en/groynes-sea-baltic-sea-339250/</a>
+                                </li>
+                                <li><a href="https://pixabay.com/en/rio-de-janeiro-urca-brazil-1683701/">https://pixabay.com/en/rio-de-janeiro-urca-brazil-1683701/</a>
+                                </li>
+                                <li>
+                                    <a href="https://en.wikipedia.org/wiki/Mount_Ellinor#/media/File:Mount_Ellinor,_Mount_Washington_Panorama.jpg">https://en.wikipedia.org/wiki/Mount_Ellinor#/media/
+                                        File:Mount_Ellinor,_Mount_Washington_Panorama.jpg</a></li>
+                                <li><a href="https://pixabay.com/en/umbrella-street-color-1678327/">https://pixabay.com/en/umbrella-street-color-1678327/</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <img width="100%" src="umbrella-1678327_640.jpg"/>
+                        </li>
+                        <li>
+                            <img width="100%" src="umbrella-1678327_640.jpg"/>
+                        </li>
                     </ul>
-                </li>
-                <li>
-                    <img width="100%" src="umbrella-1678327_640.jpg"/>
-                </li>
-                <li>
-                    <img width="100%" src="umbrella-1678327_640.jpg"/>
-                </li>
-            </ul>
+                </template>
+                <script>
+                    Polymer({
+                        is: "my-grid"
+                    });
+                </script>
+            </dom-module>
+
+            <my-grid></my-grid>
+
         </template>
-        <script>
-            Polymer({
-                is: "my-grid"
-            });
-        </script>
-    </dom-module>
-
-    <my-grid></my-grid>
-
-       </template>
-     </demo-snippet>
+    </demo-snippet>
 
 
 </div>
