Keyboard navigation + repeat template

--- a/utils/demo-page/demo-page.html
+++ b/utils/demo-page/demo-page.html
@@ -3,6 +3,7 @@
 <link rel="import" href="link-forward.html">
 <link rel="import" href="link-backward.html">
 <link rel="import" href="page-counter.html">
+<link rel="import" href="keyboard-navigation.html">
 
 <dom-module id="demo-page">
     <template>
