--- a/utils/demo-page/pages-list.html
+++ b/utils/demo-page/pages-list.html
@@ -12,6 +12,7 @@
                     'collapse',
                     'dropdown',
                     'key_interception',
+                    'repeat',
                     'ajax',
                     'badge',
                     'webstorage',
