--- a/utils/demo-page/pages-list.html
+++ b/utils/demo-page/pages-list.html
@@ -14,6 +14,7 @@
                     'key_interception',
                     'repeat',
                     'ajax',
+                    'ajax2',
                     'badge',
                     'webstorage',
                     'maps',
