Adding a date picker

--- a/utils/demo-page/pages-list.html
+++ b/utils/demo-page/pages-list.html
@@ -25,7 +25,8 @@
                     'youtube',
                     'youtube_extented',
                     'grid',
-                    'rss_feed'
+                    'rss_feed',
+                    'date_picker'
                 ]
             }
         }
