Tooltip, if, notifications

--- a/examples/dialog/index.html
+++ b/examples/dialog/index.html
@@ -8,32 +8,16 @@
 
     <link rel="import" href="../../bower_components/polymer/polymer.html"/>
     <link rel="import" href="../../bower_components/iron-demo-helpers/demo-snippet.html"/>
-    <link rel="import" href="../../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
-    <link rel="import" href="../../bower_components/iron-ajax/iron-ajax.html">
 
     <link rel="import" href="../../utils/demo-page/demo-page.html">
 
     <style>
-        .person {
-            font-size: 1.1em;
-            margin: 10px;
-            padding: 5px 25px;
-        }
-
-        .person:hover {
-            background: AliceBlue;
-        }
-
-        .person p {
-            margin-top: 3px;
-            margin-bottom: 3px;
-        }
     </style>
 
 </head>
 <body>
 
-<demo-page label="Date picker" path="date_picker">
+<demo-page label="Dialog" path="dialog">
 
     <demo-snippet>
         <template>
