--- a/utils/demo-page/pages-list.html
+++ b/utils/demo-page/pages-list.html
@@ -26,7 +26,15 @@
                     'youtube_extented',
                     'grid',
                     'rss_feed',
-                    'date_picker'
+                    'notifications',
+                    'slider',
+                    'date_picker',
+                    'chart',
+                    'tooltip',
+                    'dialog',
+                    'googlesheet',
+                    'street_view',
+                    'animations'
                 ]
             }
         }
