--- a/examples/repeat/index.html
+++ b/examples/repeat/index.html
@@ -13,11 +13,6 @@
     <link rel="import" href="../../utils/demo-page/demo-page.html">
 
     <style>
-        iron-image {
-            width: 300px;
-            height: 300px;
-        }
-
         .pic {
             display: inline-block;
             margin-right: 20px;
@@ -66,6 +61,12 @@
         <template>
             <dom-module id="polymer-demo">
                 <template>
+                    <style>
+                        iron-image {
+                            width: 300px;
+                            height: 300px;
+                        }
+                    </style>
                     <template is="dom-repeat" items="{{pictures}}">
                         <div class="pic">
                             <h1>{{item.name}}</h1>
