Not working street-view

--- a/examples/dialog/index.html
+++ b/examples/dialog/index.html
@@ -37,7 +37,7 @@
                         <h1>Hello!</h1>
                         <p>This is an example dialog :) Dialogs are supposed to give you some side information without
                             reloading the page.</p>
-                        <p></p>
+                        <p>Press <em>Understood!</em> to close me.</p>
                         <div>
                             <paper-button dialog-confirm autofocus>Understood!</paper-button>
                         </div>
