--- a/utils/demo-page/pages-list.html
+++ b/utils/demo-page/pages-list.html
@@ -22,7 +22,6 @@
                     'maps_interactive',
                     'maps_disabled',
                     'maps_directions',
-                    'street_view',
                     'youtube',
                     'youtube_extented',
                     'grid',
@@ -34,7 +33,8 @@
                     'tooltip',
                     'dialog',
                     'googlesheet',
-                    'animations'
+                    'animations',
+                    'street_view'
                 ]
             }
         }
