Intro page + Agenda

--- a/utils/demo-page/pages-list.html
+++ b/utils/demo-page/pages-list.html
@@ -8,6 +8,8 @@
             pages: {
                 type: Array,
                 value: [
+                    'intro',
+                    'agenda',
                     'icons',
                     'collapse',
                     'dropdown',
