--- a/utils/demo-page/demo-page.html
+++ b/utils/demo-page/demo-page.html
@@ -4,6 +4,7 @@
 <link rel="import" href="link-backward.html">
 <link rel="import" href="page-counter.html">
 <link rel="import" href="keyboard-navigation.html">
+<link href="https://fonts.googleapis.com/css?family=Garamond|Reenie+Beanie" rel="stylesheet">
 
 <dom-module id="demo-page">
     <template>
@@ -13,10 +14,10 @@
 
             <h1>
                 <link-backward page="{{path}}"></link-backward>
-                {{label}} <page-counter page="{{path}}"></page-counter>
+                <span class="navigation-label">{{label}} <page-counter page="{{path}}"></page-counter></span>
                 <link-forward page="{{path}}"></link-forward>
                 <template is="dom-if" if="{{_isDoc(documentation)}}">
-                    <small><a href="{{documentation}}">See documentation</a></small>
+                    <small class="navigation-label"><a href="{{documentation}}">See documentation</a></small>
                 </template>
             </h1>
 
