--- a/utils/demo-page/pages-list.html
+++ b/utils/demo-page/pages-list.html
@@ -10,6 +10,26 @@
                 value: [
                     'intro',
                     'agenda',
+					'what_is',
+										'what_is2',
+										'what_is3',
+										'what_is4',
+										'what_is5',
+										'what_is6',
+															'what_is7',
+															'what_is8',
+															'what_is9',
+															'what_is10',
+															'what_is11',
+															'what_is12',
+															'what_is13',
+															'what_is14',
+					'what_is15',
+					'what_is16',
+					'what_is17',
+					'what_is18',
+										'what_is19',
+										'what_is20',				
                     'icons',
                     'collapse',
                     'dropdown',
