--- a/utils/demo-page/pages-list.html
+++ b/utils/demo-page/pages-list.html
@@ -51,7 +51,12 @@
                     'notifications',
                     'slider',
                     'date_picker',
-                    'chart',
+					'time_picker',
+                    'chart1',
+					'chart2',
+					'chart3',
+					'chart4',
+					'chart5',
                     'tooltip',
                     'dialog',
                     'googlesheet',
