--- a/_open_me.html
+++ b/_open_me.html
@@ -1,3 +1,3 @@
 <script>
-    window.location.href = "./examples/icons/index.html";
+    window.location.href = "./examples/intro/index.html";
 </script>
