--- a/examples/time_picker/index.html
+++ b/examples/time_picker/index.html
@@ -8,12 +8,12 @@
 
     <link rel="import" href="../../bower_components/polymer/polymer.html"/>
     <link rel="import" href="../../bower_components/iron-demo-helpers/demo-snippet.html"/>
-    <link rel="import" href="../../bower_components/polymer-paper-date-picker/paper-date-picker.html">
+    <link rel="import" href="../../bower_components/paper-time-picker/paper-time-picker.html">
 
     <link rel="import" href="../../utils/demo-page/demo-page.html">
 	
 	<style>
-		paper-date-picker {
+		paper-time-picker {
 			margin-bottom: 20px;
 		}
 	</style>
@@ -21,14 +21,14 @@
 </head>
 <body>
 
-<demo-page label="Date picker" path="date_picker" documentation="http://bendavis78.github.io/paper-date-picker/paper-date-picker/">
+<demo-page label="Time picker" path="time_picker" documentation="http://bendavis78.github.io/paper-time-picker/paper-time-picker/">
 
     <demo-snippet>
         <template>
             <dom-module id="polymer-demo">
                 <template>
-					<paper-date-picker date={{date}} min-date="January 1, 2016" max-date="December 31, 2018"></paper-date-picker>
-					<p>Selected: {{date}}</p>
+					<paper-time-picker time={{time}}></paper-time-picker>
+					<p>Selected: {{time}}</p>
 				                </template>
                 <script>
                     Polymer({
