--- a/examples/street_view/index.html
+++ b/examples/street_view/index.html
@@ -79,7 +79,11 @@
                                     {name: "Lion Rock Hill (Hong Kong)", id: "KMtlOGNXXmQAAAAAAABY8g", zoom: 0.1},
                                     {name: "Arc de Triomphe (Paris)", id: "ULgl_i0tY-sNYdnhev699A", zoom: 0.3},
                                     {name: "Collosseum (Rome)", id: "rKZYTqQgtL94hv_H1wc9cA", zoom: 0},
-                                    {name: "Under water statues (Gulf of Mexico )", id: "ka645u0MqHoAAAQJKihqnQ", zoom: 0},
+                                    {
+                                        name: "Under water statues (Gulf of Mexico )",
+                                        id: "ka645u0MqHoAAAQJKihqnQ",
+                                        zoom: 0
+                                    },
                                     {name: "Whale shark (Oceania)", id: "xq5H2tvkw_AAAAQJLmg-7A", zoom: 0.3},
                                     {name: "Rio de Janeiro (Brazil)", id: "4uzAc8pszmAAAAAGOtKjmw", zoom: 0.4}
 
