--- a/examples/what_is18/index.html
+++ b/examples/what_is18/index.html
@@ -9,16 +9,16 @@
     <link rel="import" href="../../bower_components/polymer/polymer.html"/>
 
     <link rel="import" href="../../utils/demo-page/demo-page.html">
-	
-	    <link rel="import" href="../../bower_components/iron-image/iron-image.html"/>
-		
-		<style>
-			iron-image {
-				width: 250px;
-				height: 70px;
-				padding: 0;
-			}
-		</style>
+
+    <link rel="import" href="../../bower_components/iron-image/iron-image.html"/>
+
+    <style>
+        iron-image {
+            width: 250px;
+            height: 70px;
+            padding: 0;
+        }
+    </style>
 
 </head>
 <body>
@@ -26,8 +26,11 @@
 <demo-page label="What is Polymer?" path="what_is18">
 
     <div class="info-sheet">
-        <h1>Luckily folks from <iron-image sizing="contain" src="./GoogleLogoSept12015.png"></iron-image> created <span>Polymer</span>!</h1>
-		
+        <h1>Luckily folks from
+            <iron-image sizing="contain" src="./GoogleLogoSept12015.png"></iron-image>
+            created <span>Polymer</span>!
+        </h1>
+
     </div>
 
 </demo-page>
