--- a/utils/demo-page/pages-list.html
+++ b/utils/demo-page/pages-list.html
@@ -57,6 +57,11 @@
                     'chart3',
                     'chart4',
                     'chart5',
+                    'chart6',
+                    'chart7',
+                    'chart8',
+                    'chart9',
+                    'chart10',
                     'tooltip',
                     'dialog',
                     'googlesheet',
