--- a/examples/collapse/index.html
+++ b/examples/collapse/index.html
@@ -49,9 +49,9 @@
                 <script>
                     Polymer({
                         is: "polymer-demo",
-                        ready: function () {
+                        /*ready: function () {
                             this.listen(this.$$("paper-toggle-button"), 'change', '_showHide');
-                        },
+                        },*/
                         _showHide: function () {
                             this.$$("iron-collapse").toggle();
                         }
