--- a/utils/demo-page/demo-page.html
+++ b/utils/demo-page/demo-page.html
@@ -20,7 +20,7 @@
 
             <h1>
                 <link-backward page="{{path}}"></link-backward>
-                <span class="navigation-label">{{label}} <span class="right"><!--<time-counter></time-counter>--> <page-counter
+                <span class="navigation-label">{{label}} <span class="right"><time-counter></time-counter> <page-counter
                         page="{{path}}"></page-counter></span></span>
                 <link-forward page="{{path}}"></link-forward>
                 <template is="dom-if" if="{{_isDoc(documentation)}}">
