--- a/utils/demo-page/pages-list.html
+++ b/utils/demo-page/pages-list.html
@@ -65,8 +65,15 @@
                     'tooltip',
                     'dialog',
                     'googlesheet',
-                    'animations',
-                    'street_view'
+                    'street_view',
+					'end1',
+					'end2',
+					'end3',
+					'end4',
+					'end5',
+					'end6',
+					'end7',
+					'end8'
                 ]
             }
         }
